fixed nav to align horizontally

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -88,9 +88,20 @@ body {
   margin: 0 auto;
 }
 
-.navbar-inverse {
+
+.navbar-inverse{
+  position: relative;
+  width: 900px;
+  top:10px;
+  z-index: 3;
   background-color: rgb(39, 5, 48);
   border-color: #080808;
+}
+
+.nav-container{
+  position: absolute;
+  width:100%;
+  z-index: 3;
 }
 
 .navbar-inverse .navbar-nav & > .active & > a, .navbar-inverse .navbar-nav & > .active & > a:hover, .navbar-inverse .navbar-nav & > .active & > a:focus {
@@ -122,7 +133,7 @@ body {
   width: 100%;
   & > .img {
     min-width: 1024px;
-    min-height: 400px;
+    min-height: 300px;
     width: 100%;
     top: 0;
     left: 0;
@@ -174,4 +185,6 @@ body {
 .card-img {
   margin: 8px;
   box-shadow: 1px 2px 3px #bcbcbc;
+  width:80px;
+  height:80px;
 }
